<resources>
    <string name="app_name">Geeky Math</string>
    <string name="action_settings">Settings</string>
    <string name="learn">Learn Binary</string>
    <string name="learn2">Learn Hexadecimal</string>
    <string name="test1">Decimal to Binary</string>
    <string name="test2">Binary to Decimal</string>
    <string name="test3">Mixed Decimal/Binary Conversions</string>
    <string name="test4">Decimal to Hexadecimal</string>
    <string name="test5">Hexadecimal to Decimal</string>
    <string name="test6">Mixed Decimal/Hexadecimal Conversions</string>
    <string name="opt">Options</string>
    <string name="test10">Test your skills</string>
    <string name="title_activity_test">Test</string>
    <string name="message">Type in your answer</string>
    <string name="Check">Check</string>
    <string name="title_activity_answer">Answer</string>
    <string name="cont">Continue</string>
    <string name="streak"><br />Current Streak:</string>
    <string name="invalid">null</string>
    <string name="instructions">Convert the following number to binary.</string>
    <string name="menu">Main Menu</string>
    <string name="chart">Chart</string>
    <string name="title_activity_learn">Learn</string>
    <string name="hex_input_label">HexInput</string>
    <string name="subtype_en_US">English (US)</string>
    <string name="hexInput">
        \n\nWhen using our hexadecimal tests, please make sure you are using HexInput as your keyboard.
        \n\nThis can be accessed through Settings, Language and Input, under Keyboard and input Methods.
        \nCheck the box next to the words "HexInput".
        \nSelect the answer box and check your notifications to change the keyboard..</string>
    <string name="hexInputShort">Please ensure that you are using the HexInput Keyboard.</string>
    <string name="prev">Previous Correct Answer: </string>
    <string name="intro">
        Welcome! Before you practice with converting decimal numbers to binary and vice versa, you\'ll need to learn how.\n
        \nSo, this is your place to run through a quick, beginner-friendly tutorial.\n
        \nTo navigate the tutorial, just swipe your finger left or right across the screen.</string>
    <string name="decimalsystem">So, we all know the number 512. But why does 512 equal, well…512? How do we determine its value?\n
        \nWe have a system. It’s called decimal, or base 10, and you learned it in elementary school.\n
        \nThink back to 2nd grade when you first learned the place values.\n
        \n
    </string>
    <string name="decimalsystem2">
        \nHow would we calculate 512?\n
        \n5 is in the hundreds place, so we multiply: 5 x 100 = 500\n
        \n1 is in the tens place, so we multiply: 1 x 10 = 10\n
        \n2 is in the ones place, so we multiply: 2 x 1 = 2\n
        \n500 + 10 + 2 = 512\n
        \nSo that\’s how we know the value of 512!\n
        \n
    </string>
    <string name="decimalsystem3">
        \n
        \nIf all of this is sounding really basic, that’s because it is. However, it\’s all for your benefit, trust me.\n\n
    </string>
    <string name="reading1">The hundreds place has a value of 100 (that’s why we multiply 5 by 100). And the tens place has a value of 10, and the ones place has a value of 1. Etc, etc.\n
        \nBut how did the ones, tens, and hundreds place values come about, anyway?\n
        \nWell, exponents play a big role in that. Think about it.
    </string>
    <string name="reading2">\nSeeing the pattern?\n
        \nEvery system has a specific base that it\’s built around. In the decimal system, we use base 10, which is why we use the exponents of ten to get the place values!\n
        \nBut what if we were using binary?\n
        \nIn binary, we use base two. So, if we want to get the place values, we would have to use the exponents of two, just like we used the exponents of ten to get the place values for the decimal system.\n
    </string>
    <string name="reading3">And so on.\n
        \nSo, when we\’re using binary, we’d set it up like this…</string>
    <string name="bases">Hopefully, that’s making sense. If not, go back and review, because we\’re moving on to trickier stuff now. We\’re going to learn how to convert numbers from the decimal system to the binary system and vice versa.\n
        \nFirstly, let\’s say you have 101 in binary. How on earth do you convert it to decimal?\n
        \nWell, remember how we did it for 512? We multiplied each number by the place value it was in.\n
        \n1 is in the 4s place. 1 x 4 = 4\n
        \n0 is in the 2s place. 1 x 2 = 0\n
        \n1 is in the 1s place. 1 x 1 = 1\n
        \n4 + 0 + 1 = 5\n
        </string>
        <string name="bases2">\nNotice that the only digits we can use for binary are 0 and 1.\n</string>
    <string name="bases3">\nNow let\’s try converting numbers from decimal to binary.\n
    \nLet\’s say you have the number 9 in base 10 (or decimal).\n
    \nWell, let\’s set up the place values for binary.\n
    \nThe important thing when converting numbers from decimal to binary is the trick \“Go as high as you can, but no higher\”.\n
    \nWhat that means is that, say you have the number 9. Which place value is the highest number we can get that\’s not higher than 9?\n
    \nWhy, 8 of course. So le\t’s put a nice little 1 in the 8s place. (Use the picture below for reference)\n
    \n\nNow, we need to subtract 8 from 9 to see how many numbers we still need to account for:\n
    \n9 – 8 = 1\n
    \nNext, what number is the biggest we can get without exceeding 1?\n
    \nWell…1. So let\’s put a 1 in the ones place.\n
    \nYou might be wondering, what about the two place values in between? The four and the twos place?\n
    \nWell, we have the number 0 for a reason.
</string>
    <string name="practiceProblems">You can check your work, by the way, by converting the number back to decimal and seeing if it\’s the same thing.\n
        \n1 x 8 = 8\n
        \n0 x 4 = 0\n
        \n0 x 2 = 0\n
        \n1 x 1 = 1\n
        \n8 + 0 +0 + 1 = 9  Yup, that’s right\n
        \nSome practice problems should help you remember how to do all this. So let\'s practice.
    </string>
    <string name="practiceProblems2">Great job! Did you notice something about those problems? Let\'s take a look at a few.\n</string>
    <string name="practiceProblems21">\nHopefully you know that all these numbers are odd, but do you see something else that their binary equivalents have in common? They all end in 1! The only way to write any odd number in binary is to end it with a one.</string>
    <string name="finishingup">That’s all there is to it\n
        \nYou can read this over again or you can head on back to the home menu by pressing the four rectangles in the top right hand corner and start practicing.\n
        \nDon\'t forget to expand to the Hexadecimal system when you\'re ready!\n
    </string>
    <string name="hexIntro2">
        \nSo it would look like this.
    </string>
    <string name="hexIntro3">
        \nAnd…we’ll stop there, before the numbers get too big and messy.
    </string>
    <string name="hexDigits2">
        \nBy the way, you may want to memorize the 16 digits of hexadecimal and what number of the decimal system they correspond to. It’s important in hexadecimal conversions.
    </string>
    <string name="contact">
        \nIf you find a bug in the program, please email us at geekymath@gmail.com describing the issue and what happened directly before it occurred.
        \n\nAny compliments, complaints, concerns, and bugs are fully appreciated by our team. Thank you for testing!
        \n\n&#169; GeekyMath 2016
    </string>
    <string name="title_activity_next">next</string>
    <string name="title_activity_billy_menu">billyMenu</string>
    <string-array name="ya">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>