<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Test">

    <TextView android:id="@+id/direct"
        android:text="@string/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView android:id="@+id/question"
        android:text="@string/invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        />

    <EditText android:id="@+id/answerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/message"
        />

    <Button android:text="@string/Check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="receive"
        android:lines="1"
        />

    <TextView android:text="@string/streak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        />

    <TextView android:id="@+id/StreakNumber"
        android:text="@string/invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>
