<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenu">

    <Button android:id="@+id/learn"
        android:text="@string/learn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button android:text="@string/test1"
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="load"
        />

    <Button android:text="@string/test2"
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="load"
        />

    <Button android:text="@string/test3"
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="load"
        />

</LinearLayout>
