<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/BB">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.compsci.lauryn.geekymath.MainActivitywasd">

    <!--This is the second button on the screen giving the option to take a test from decimal to binary-->
    <Button android:text="@string/test1"
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#00ff00"
        android:background="#000000"
        android:onClick="Loading"
        />

    <!-- Third button giving the option to take a test from binary to decimal-->
    <Button android:text="@string/test2"
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#00ff00"
        android:background="#000000"
        android:onClick="Loading"
        />

    <!-- Fourth button giving the option to take a test of mixed bases. Either from binary to decimal or decimal to binary at random-->
    <Button android:text="@string/test3"
        android:id="@+id/l3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#00ff00"
        android:background="#000000"
        android:onClick="Loading"
        />

    <Button android:text="@string/test4"
        android:id="@+id/l4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#00ff00"
        android:background="#000000"
        android:onClick="Loading"
        />

        <Button android:text="@string/test5"
            android:id="@+id/l5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#00ff00"
            android:background="#000000"
            android:onClick="Loading"
            />

        <Button android:text="@string/test6"
            android:id="@+id/l6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#00ff00"
            android:background="#000000"
            android:onClick="Loading"
            />



        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:textColor="#adff00"
        android:textSize="18sp"
        />
</LinearLayout>
</ScrollView>
